# CSSE_4011

base_node_observer2/: CMakeLists.txt  prj.conf
base_node_observer2/src/: kalman_filter.c  main.c  node_filtering.c  observer.c  tracking.c
ultrasonic_node/: CMakeLists.txt  prj.conf
ultrasonic_node/src/: main.c
